--- a/lequipe-e-sport.html
+++ b/lequipe-e-sport.html
@@ -66,7 +66,7 @@
          <div class="hero hero--full">
             <header>
                      <p>
-                              <a href="/poster/" title="Poster">Poster</a>
+                              <a href="/poster/" title="#Poster">#Poster</a>
                      </p>
                <h1>
                   L&#x27;équipe E-sport
@@ -107,10 +107,10 @@
 
                      <ul class="post__tag">
                            <li>
-                              <a href="/poster/">Poster</a>
+                              <a href="/poster/">#Poster</a>
                            </li>
                            <li>
-                              <a href="/work/">Work</a>
+                              <a href="/work/">#Work</a>
                            </li>
                      </ul>
 
