--- a/amp/lequipe-e-sport.html
+++ b/amp/lequipe-e-sport.html
@@ -2,7 +2,7 @@
 <html amp lang="fr">
 <head>
     <meta charset="utf-8">
-    <title>L&#x27;équipe E-sport - Alexis Bibic | Directeur Artistique Graphic Designer </title>
+    <title>L&#x27;équipe E-sport - Alexis Bibic | Directeur Artistique Junior </title>
     <meta name="description" content="Création d'une campagne print pour le début du magazine " L'équipe E-sport&hellip;" />
     
     <link rel="canonical" href="/lequipe-e-sport.html">
@@ -584,7 +584,7 @@ aside {
         <div>
             <a on="tap:navbar-sidebar.toggle" class="navbar-sidebar-toggle" title="Menu">Menu</a>
                 <a class="logo logo-text" href="/amp/">
-                Alexis Bibic | Directeur Artistique Graphic Designer
+                Alexis Bibic | Directeur Artistique Junior
             </a>
         </div>
     </nav>
